--- a/src/index.css
+++ b/src/index.css
@@ -50,11 +50,27 @@
         }
     }
 
-  
+
 
 }
+
 @layer components {
     /* .button-test {
         @apply block px-3 py-2 border-2;
     } */
+}
+
+
+@layer utilities {
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        /* IE and Edge */
+        scrollbar-width: none;
+        /* Firefox */
+    }
 }
