--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,21 @@
         animation-delay: 0.4s;
     }
 
+    *::-webkit-scrollbar {
+        width: 16px;
+    }
+    
+    *::-webkit-scrollbar-track {
+        background: #E0DFDF;
+        border-radius: 6px;
+    }
+    
+    *::-webkit-scrollbar-thumb {
+        background-color: #0A2F4E;
+        border-radius: 12px;
+        border: 3px solid #E0DFDF;
+    }
+
     @keyframes load {
         0% {
             opacity: 0;
